--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
 
   <div class="link-box">
-    <a id="link" href="https://alvinthemax.github.io/scrapeme" target="_blank">https://example.com</a>
+    <a id="link" href="https://alvinthemax.github.io/scrapeme" target="_blank">https://alvinthemax.github.io/scrapeme</a>
     <button class="copy-btn" onclick="copyToClipboard()">Copy</button>
   </div>
 
